--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RuangKelas</string>
     <string name="sunting_profil">Sunting Profil</string>
     <string name="sign_out">Keluar Akun</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
